--- a/index.html
+++ b/index.html
@@ -8,26 +8,15 @@
     <meta name="author" content="">
 
     <!-- Le styles -->
-    <link href="http://getbootstrap.com/2.3.2/assets/css/bootstrap.css" rel="stylesheet">
+    <link href="./css/bootstrap.css" rel="stylesheet">
     <style>
       body {
         padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
       }
     </style>
-    <link href="http://getbootstrap.com/2.3.2/assets/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="./css/bootstrap-responsive.css" rel="stylesheet">
 
-    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-      <script src="../assets/js/html5shiv.js"></script>
-    <![endif]-->
-
-    <!-- Fav and touch icons -->
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="http://getbootstrap.com/2.3.2/assets/ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="http://getbootstrap.com/2.3.2/assets/ico/apple-touch-icon-114-precomposed.png">
-      <link rel="apple-touch-icon-precomposed" sizes="72x72" href="http://getbootstrap.com/2.3.2/assets/ico/apple-touch-icon-72-precomposed.png">
-                    <link rel="apple-touch-icon-precomposed" href="http://getbootstrap.com/2.3.2/assets/ico/apple-touch-icon-57-precomposed.png">
-                                   <link rel="shortcut icon" href="http://getbootstrap.com/2.3.2/assets/ico/favicon.png">
-  <style type="text/css"></style></head>
+  </head>
 
   <body style="">
 
@@ -61,19 +50,9 @@
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="./index_files/jquery.js"></script>
-    <script src="./index_files/bootstrap-transition.js"></script>
-    <script src="./index_files/bootstrap-alert.js"></script>
-    <script src="./index_files/bootstrap-modal.js"></script>
-    <script src="./index_files/bootstrap-dropdown.js"></script>
-    <script src="./index_files/bootstrap-scrollspy.js"></script>
-    <script src="./index_files/bootstrap-tab.js"></script>
-    <script src="./index_files/bootstrap-tooltip.js"></script>
-    <script src="./index_files/bootstrap-popover.js"></script>
-    <script src="./index_files/bootstrap-button.js"></script>
-    <script src="./index_files/bootstrap-collapse.js"></script>
-    <script src="./index_files/bootstrap-carousel.js"></script>
-    <script src="./index_files/bootstrap-typeahead.js"></script>
+    <script src="./js/jquery.js"></script>
+    <script src="./js/bootstrap.js"></script>
+
 
   
 
