--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="./js/jquery.js"></script>
+    <script src="./js/jquery-2.0.3.js"></script>
     <script src="./js/bootstrap.js"></script>
 
 
