Modify menu entries in index.html

--- a/index.html
+++ b/index.html
@@ -27,12 +27,10 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="http://getbootstrap.com/2.3.2/examples/starter-template.html#">Governator</a>
+          <a class="brand" href="/">Governator</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li class="active"><a href="http://getbootstrap.com/2.3.2/examples/starter-template.html#">Home</a></li>
-              <li><a href="http://getbootstrap.com/2.3.2/examples/starter-template.html#about">About</a></li>
-              <li><a href="http://getbootstrap.com/2.3.2/examples/starter-template.html#contact">Contact</a></li>
+              <li class="active"><a href="/">Home</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
